# bombus

./: .gitignore  Cargo.toml  build.rs
bombus-data/: Cargo.toml
bombus-data/src/: lib.rs
bombus-data/src/persist/: mod.rs
src/: main.rs
src/notifications/: mod.rs
src/utils/: album_cover.rs  mod.rs  theme.rs
ui/: album.slint  albumlayout.slint  appwindow.slint  components.slint  cover.slint  global.slint  launch.slint  library_item.slint  tracklayout.slint  typography.slint
ui/components/: track_columns.slint  track_row.slint
