[package]
name = "bombus-slint"
version = "0.1.0"
authors = ["mmcmains <mmcmains@gsandf.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.0", default-features = false, features = [
    "compat-1-2",
    "std",
    "backend-winit",
    "renderer-winit-skia",
] }
souvlaki = "0.7.0"
bombus-data = { path = "bombus-data" }

[build-dependencies]
slint-build = "1.0"
