[package]
name = "bombus"
description = "A thin client for MusicBee."
version = "0.1.0"
authors = ["meyer-mcmains <meyer.mcmains@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.0", default-features = false, features = [
    "compat-1-2",
    "std",
    "backend-winit",
    "renderer-winit-skia",
] }
souvlaki = "0.7.0"
bombus-data = { path = "bombus-data" }
image = { version = "0.24.7", default-features = false, features = ["jpeg"] }

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "Bombus"
identifier = "app.meyer-mcmains.bombus"
