[package]
name = "bombus-data"
version = "0.1.0"
authors = ["meyer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# todo make API calls non-blocking and remove use of blocking feature
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
tungstenite = "0.13.0"
native-tls = "0.2.7"
directories = "5.0.1"
